--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
             <a>Download Excursion (Comming soon!)</a>
         </header>
 
-        
+        <section id="app_demo">
+            <video src="resources/New folder/phone_video.mp4" type="video/mp4" autoplay muted>
+                Your browser does not support the video tag.
+            </video>
+        </section>
     </body>
 </html>
