add app info and styling

--- a/index.html
+++ b/index.html
@@ -14,9 +14,15 @@
         </header>
 
         <section id="app_demo">
-            <video src="resources/New folder/phone_video.mp4" type="video/mp4" autoplay muted>
+            <video src="resources/media/phone_video.mp4" type="video/mp4" autoplay muted>
                 Your browser does not support the video tag.
             </video>
         </section>
-    </body>
+
+        <section id="app_info">
+            <h2>Your personal travel guide</h2>
+            <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+            <img src="resources/media/landscape_picture.webp">
+        </section>
+    </body> 
 </html>
