add footer and styling

--- a/index.html
+++ b/index.html
@@ -23,6 +23,15 @@
             <h2>Your personal travel guide</h2>
             <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
             <img src="resources/media/landscape_picture.webp">
+            <br>
+            <br>
         </section>
+
+        <footer>
+            <img src="resources/media/phone_icon.webp">
+            <br>
+            <h2>Coming  Soon for iPhone and Android</h2>
+            <a>Download Excursion (Coming soon!)</a>
+        </footer>
     </body> 
 </html>
