--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             <br>
             <h2>Coming  Soon for iPhone and Android</h2>
             <a>Download Excursion (Coming soon!)</a>
+            <p>@ Excursion</p>
         </footer>
     </body> 
 </html>
